--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -170,46 +170,36 @@
                     android:id="@+id/categoriesRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     android:nestedScrollingEnabled="false">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
             </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_140sdp"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:orientation="vertical">
-
-                <!-- <ImageView
-                     android:layout_width="match_parent"
-                     android:layout_height="@dimen/_140sdp"
-                     android:scaleType="fitXY"
-                     android:src="@drawable/veg" />-->
-
-                <!-- <ImageView
-                     android:layout_width="match_parent"
-                     android:layout_height="@dimen/_140sdp"
-                     android:scaleType="fitXY"
-                     android:src="#30000000" />-->
 
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_140sdp"></androidx.viewpager.widget.ViewPager>
+                    android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
 
                 <LinearLayout
                     android:id="@+id/SliderDots"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/viewPager"
-                    android:gravity="center_vertical|center_horizontal"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
                     android:orientation="horizontal"
-                    android:paddingBottom="@dimen/_5sdp" />
+                    android:paddingBottom="@dimen/_3sdp" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/homeRecyclerView"
