--- a/app/src/main/res/layout/products_list_item.xml
+++ b/app/src/main/res/layout/products_list_item.xml
@@ -14,61 +14,52 @@
         android:layout_marginTop="@dimen/_6sdp"
         android:layout_marginRight="@dimen/_8sdp"
         android:background="@color/white"
+        android:elevation="@dimen/_3sdp"
         android:orientation="vertical"
         android:paddingBottom="@dimen/_8sdp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background_color"
-            android:gravity="center">
+            android:background="@color/white">
 
             <ImageView
                 android:id="@+id/productImageView"
-                android:layout_width="@dimen/_135sdp"
-                android:layout_height="@dimen/_120sdp"
+                android:layout_width="@dimen/_125sdp"
+                android:layout_height="@dimen/_125sdp"
                 android:layout_centerInParent="true"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:scaleType="fitXY"
                 android:src="#989898" />
-
-            <RelativeLayout
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="@dimen/_22sdp"
-                android:layout_alignParentLeft="true"
-                android:layout_margin="@dimen/_2sdp"
-                android:background="@drawable/circle_filled_red"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/categoryImageView"
-                    android:layout_width="@dimen/_22sdp"
-                    android:layout_height="@dimen/_22sdp"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:text="20%"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_8sdp" />
-
-            </RelativeLayout>
 
             <ImageView
                 android:id="@+id/favouriteImageView"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_alignParentRight="true"
-                android:layout_margin="@dimen/_2sdp"
+                android:layout_margin="@dimen/_8sdp"
                 android:padding="@dimen/_4sdp"
                 android:src="@drawable/ic_fav_select" />
 
 
         </RelativeLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:background="@drawable/strike_through"></View>
+
         <TextView
             android:id="@+id/productNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginRight="@dimen/_2sdp"
+            android:minHeight="@dimen/_35sdp"
             android:paddingLeft="@dimen/_3sdp"
             android:text="Freedom Refined Sunflower"
             android:textColor="@color/black"
@@ -77,7 +68,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <TextView
@@ -87,7 +78,7 @@
                 android:layout_marginRight="@dimen/_2sdp"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="@dimen/_5sdp"
-                android:textSize="@dimen/_10sdp" />
+                android:textSize="@dimen/_11sdp" />
 
             <TextView
                 android:id="@+id/costTextView"
@@ -99,19 +90,23 @@
                 android:gravity="center|right"
                 android:paddingLeft="@dimen/_3sdp"
                 android:text="₹ XXX"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 android:visibility="invisible" />
 
         </RelativeLayout>
 
         <TextView
             android:id="@+id/addTextView"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_22sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_4sdp"
             android:background="@drawable/green_square_rounded"
             android:gravity="center"
+            android:paddingLeft="@dimen/_13sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingRight="@dimen/_13sdp"
+            android:paddingBottom="@dimen/_3sdp"
             android:text="ADD"
             android:textColor="@color/white"
             android:textSize="@dimen/_10sdp"
