--- a/app/src/main/res/drawable/strike_through.xml
+++ b/app/src/main/res/drawable/strike_through.xml
@@ -8,7 +8,7 @@
     <item>
         <shape android:shape="line">
             <stroke android:width="1dp"
-                android:color="#808080"/>
+                android:color="#BEBEBE"/>
         </shape>
     </item>
 </layer-list>
