--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-
     <LinearLayout
         android:id="@+id/centerLayout"
         android:layout_width="match_parent"
@@ -60,7 +59,8 @@
             android:id="@+id/input_layout_empid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp">
+            android:layout_marginTop="@dimen/_8sdp"
+            app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/passwordEditText"
