--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -116,7 +116,8 @@
             android:id="@+id/input_layout_empid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp">
+            android:layout_marginTop="@dimen/_8sdp"
+            app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/passwordEditText"
