--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -1,54 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_color"
         android:orientation="vertical"
         android:paddingLeft="@dimen/_6sdp"
         android:paddingRight="@dimen/_6sdp">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/categoryNameTextView"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_25sdp"
-            android:background="@color/white"
-            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
+            android:gravity="center_vertical"
             android:paddingLeft="@dimen/_6sdp"
             android:paddingTop="@dimen/_5sdp"
             android:paddingRight="@dimen/_6sdp"
-            android:paddingBottom="@dimen/_5sdp">
-
-            <TextView
-                android:id="@+id/categoryNameTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
-                android:gravity="center_vertical"
-                android:text="Top Offers"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
-
-            <TextView
-                android:id="@+id/viewAllTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="View all > "
-                android:textSize="@dimen/_11sdp"
-                android:visibility="invisible" />
-
-        </RelativeLayout>
+            android:paddingBottom="@dimen/_5sdp"
+            android:text="Top Offers"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="@dimen/_5sdp"
             android:paddingBottom="@dimen/_5sdp">
 
             <androidx.recyclerview.widget.RecyclerView
