Forgot Password, Address for Order Api's Integrated

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -30,12 +30,12 @@
             android:layout_marginTop="@dimen/_15sdp">
 
             <EditText
-                android:id="@+id/mobileNumberEditText"
+                android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mobile Number"
+                android:hint="Email"
                 android:imeOptions="actionNext"
-                android:inputType="number"
+                android:inputType="textEmailAddress"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:paddingLeft="@dimen/_8sdp"
@@ -58,7 +58,7 @@
             android:paddingTop="@dimen/_5sdp"
             android:paddingRight="@dimen/_20sdp"
             android:paddingBottom="@dimen/_5sdp"
-            android:text="Send Password"
+            android:text="SUBMIT"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
             app:fontFamily="@font/poppins_medium" />
