--- a/app/src/main/res/layout/product_units_list_item.xml
+++ b/app/src/main/res/layout/product_units_list_item.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/item_border">
 
         <TextView
-            android:id="@+id/productImageView"
+            android:id="@+id/productUnitTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/_1sdp"
