Product Detail, Category Products, Add to Cart Changed

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -115,7 +115,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -144,14 +143,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="₹"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_13sdp" />
-
-                        <TextView
                             android:id="@+id/productPriceTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -159,8 +150,7 @@
                             android:textColor="@color/black"
                             android:textSize="@dimen/_13sdp"
                             android:textStyle="bold"
-                            app:fontFamily="@font/poppins_medium" />
-
+                            app:fontFamily="@font/quicksand_medium" />
 
                     </LinearLayout>
 
@@ -195,6 +185,15 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/stockQuantityTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:gravity="right"
+                android:textSize="@dimen/_9sdp"
+                android:textStyle="italic" />
 
             <RelativeLayout
                 android:id="@+id/itemLayout"
