--- a/app/src/main/res/layout/category_products_list_item.xml
+++ b/app/src/main/res/layout/category_products_list_item.xml
@@ -7,119 +7,14 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <!-- <LinearLayout
-         android:id="@+id/itemLayout"
-         android:layout_width="@dimen/_135sdp"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="@dimen/_6sdp"
-         android:layout_marginRight="@dimen/_8sdp"
-         android:background="@color/white"
-         android:elevation="@dimen/_3sdp"
-         android:orientation="vertical"
-         android:paddingBottom="@dimen/_8sdp">
-
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@color/white">
-
-             <ImageView
-                 android:id="@+id/productImageView"
-                 android:layout_width="@dimen/_125sdp"
-                 android:layout_height="@dimen/_125sdp"
-                 android:layout_centerInParent="true"
-                 android:layout_marginTop="@dimen/_5sdp"
-                 android:scaleType="fitXY"
-                 android:src="#989898" />
-
-             <ImageView
-                 android:id="@+id/favouriteImageView"
-                 android:layout_width="@dimen/_20sdp"
-                 android:layout_height="@dimen/_20sdp"
-                 android:layout_alignParentRight="true"
-                 android:layout_margin="@dimen/_8sdp"
-                 android:padding="@dimen/_4sdp"
-                 android:src="@drawable/ic_fav_select" />
-
-
-         </RelativeLayout>
-
-         <View
-             android:layout_width="match_parent"
-             android:layout_height="@dimen/_1sdp"
-             android:layout_marginLeft="@dimen/_10sdp"
-             android:layout_marginTop="@dimen/_2sdp"
-             android:layout_marginRight="@dimen/_10sdp"
-             android:background="@drawable/strike_through"></View>
-
-         <TextView
-             android:id="@+id/productNameTextView"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="@dimen/_5sdp"
-             android:layout_marginTop="@dimen/_5sdp"
-             android:layout_marginRight="@dimen/_2sdp"
-             android:minHeight="@dimen/_35sdp"
-             android:paddingLeft="@dimen/_3sdp"
-             android:text="Freedom Refined Sunflower"
-             android:textColor="@color/black"
-             android:textSize="@dimen/_11sdp" />
-
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="@dimen/_5sdp"
-             android:orientation="horizontal">
-
-             <TextView
-                 android:id="@+id/offerCostTextView"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginRight="@dimen/_2sdp"
-                 android:gravity="left|center_vertical"
-                 android:paddingLeft="@dimen/_5sdp"
-                 android:textSize="@dimen/_11sdp" />
-
-             <TextView
-                 android:id="@+id/costTextView"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_alignParentRight="true"
-                 android:layout_marginRight="@dimen/_2sdp"
-                 android:background="@drawable/strike_through"
-                 android:gravity="center|right"
-                 android:paddingLeft="@dimen/_3sdp"
-                 android:text="₹ XXX"
-                 android:textSize="@dimen/_11sdp"
-                 android:visibility="invisible" />
-
-         </RelativeLayout>
-
-         <TextView
-             android:id="@+id/addTextView"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="@dimen/_5sdp"
-             android:layout_marginTop="@dimen/_4sdp"
-             android:background="@drawable/green_square_rounded"
-             android:gravity="center"
-             android:paddingLeft="@dimen/_13sdp"
-             android:paddingTop="@dimen/_3sdp"
-             android:paddingRight="@dimen/_13sdp"
-             android:paddingBottom="@dimen/_3sdp"
-             android:text="ADD"
-             android:textColor="@color/white"
-             android:textSize="@dimen/_10sdp"
-             android:visibility="visible" />
-
-     </LinearLayout>-->
-
     <LinearLayout
         android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
         android:background="@color/white"
         android:elevation="@dimen/_3sdp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/_5sdp"
         android:paddingTop="@dimen/_6sdp"
@@ -131,31 +26,32 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_100sdp"
             android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/_5sdp"
             android:padding="@dimen/_5sdp"
             android:scaleType="fitXY"
             android:src="#989898" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_6sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/productNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:maxLines="2"
                 android:paddingLeft="@dimen/_3sdp"
                 android:text="Freedom Refined Sunflower"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_11sdp" />
 
-            <RelativeLayout
+            <!--<RelativeLayout
                 android:layout_width="@dimen/_120sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/item_border">
 
                 <ImageView
@@ -163,16 +59,32 @@
                     android:layout_height="@dimen/_25sdp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/_8sdp"
+                    android:layout_marginRight="@dimen/_4sdp"
+                    android:padding="@dimen/_5sdp"
                     android:rotation="90"
                     android:src="@drawable/ic_arrow" />
+
+            </RelativeLayout>-->
+
+            <RelativeLayout
+                android:id="@+id/optionsLayout"
+                android:layout_width="@dimen/_120sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/item_border">
+
+                <Spinner
+                    android:id="@+id/optionsSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_25sdp"
+                    android:padding="@dimen/_5sdp" />
 
             </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:weightSum="1">
@@ -190,7 +102,7 @@
                         android:background="@drawable/strike_through"
                         android:gravity="center|right"
                         android:text="MRP ₹ XXX"
-                        android:textSize="@dimen/_11sdp"
+                        android:textSize="@dimen/_9sdp"
                         android:visibility="visible" />
 
                     <TextView
