--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -230,6 +230,23 @@
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/applyCouponTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_12sdp"
+                android:background="@drawable/item_border"
+                android:fontFamily="@font/poppins_medium"
+                android:paddingLeft="@dimen/_6sdp"
+                android:paddingTop="@dimen/_3sdp"
+                android:paddingRight="@dimen/_6sdp"
+                android:paddingBottom="@dimen/_3sdp"
+                android:text="Apply Coupon"
+                android:textColor="@color/red"
+                android:textStyle="bold" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
