--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -46,13 +47,13 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/addAddressTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginRight="@dimen/_8sdp"
             android:background="@drawable/item_border"
-            android:id="@+id/addAddressTextView"
             android:drawableRight="@drawable/plus"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
@@ -65,6 +66,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/poppins_medium"
             android:text="Select shipping address:"
             android:textColor="@color/black"
@@ -75,7 +78,9 @@
             android:id="@+id/addressRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:layout_marginRight="@dimen/_8sdp"></androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
