--- a/app/src/main/res/layout/payments_item.xml
+++ b/app/src/main/res/layout/payments_item.xml
@@ -7,20 +7,22 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_1sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:background="@color/white"
-        android:elevation="@dimen/_3sdp"
-        android:id="@+id/itemLayout"
+        android:elevation="@dimen/_2sdp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/_6sdp"
+            android:gravity="center_vertical"
             android:paddingLeft="@dimen/_8sdp"
-            android:paddingTop="@dimen/_4sdp">
+            android:paddingTop="@dimen/_6sdp"
+            android:paddingBottom="@dimen/_6sdp">
 
             <RadioButton
                 android:id="@+id/paymentTypeRadioButton"
@@ -29,42 +31,6 @@
                 android:fontFamily="@font/poppins"
                 android:paddingLeft="@dimen/_6sdp"
                 android:text=""
-                android:textSize="@dimen/_12sdp" />
-
-            <TextView
-                android:id="@+id/addressTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
-                android:text="addressTextView"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/_8sdp"
-            android:paddingTop="@dimen/_4sdp"
-            android:paddingBottom="@dimen/_8sdp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Contact"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp" />
-
-            <TextView
-                android:id="@+id/contactTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:fontFamily="@font/poppins"
-                android:text="8686912238"
-                android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
 
         </LinearLayout>
