--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -8,7 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/paymentTextView"
         android:orientation="vertical">
 
         <RelativeLayout
