--- a/app/src/main/res/layout/dialog_order_success.xml
+++ b/app/src/main/res/layout/dialog_order_success.xml
@@ -7,72 +7,85 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="@dimen/_290sdp"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1">
 
-        <TextView
-            android:id="@+id/titleTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/poppins_medium"
-            android:gravity="center"
-            android:text="Hi, "
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14sdp" />
-
-        <TextView
-            android:id="@+id/couponCodeEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:gravity="center"
-            android:paddingLeft="@dimen/_8sdp"
-            android:text="Your order was successful"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/poppins" />
-
-        <TextView
-            android:id="@+id/orderIDEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:gravity="center"
-            android:paddingLeft="@dimen/_8sdp"
-            android:text="Order ID:"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/poppins" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/bottomLayout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_36sdp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_width="@dimen/_290sdp"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="vertical"
             android:weightSum="1">
 
             <TextView
-                android:id="@+id/okTextView"
+                android:id="@+id/titleTextView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#17435C"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/poppins_medium"
                 android:gravity="center"
-                android:text="Go to Home"
-                android:textColor="@color/white"
+                android:text="Hi, "
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:id="@+id/couponCodeEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:gravity="center"
+                android:paddingLeft="@dimen/_8sdp"
+                android:text="Your order was successful"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                android:textStyle="bold" />
+                app:fontFamily="@font/poppins" />
+
+            <TextView
+                android:id="@+id/orderIDEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:gravity="center"
+                android:paddingLeft="@dimen/_8sdp"
+                android:text="Order ID:"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="@dimen/_12sdp"
+                app:fontFamily="@font/poppins" />
+
+            <LinearLayout
+                android:id="@+id/bottomLayout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/okTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#17435C"
+                    android:gravity="center"
+                    android:text="Go to Home"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_margin="@dimen/_10sdp"
+            android:src="@drawable/gh_logo" />
+
+    </RelativeLayout>
 
 </LinearLayout>
